--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,3 @@
-body {
-    color: #757575;
-    background-color: #FFFFFF;
-}
-.list {
-    list-style: none;
-}
 /*-цвет основного текста h - #212121*/
 /*-цвет h1 -белый #FFFFFF-*/
 /*-цвет secondary текста р #757575-*/
@@ -14,6 +7,23 @@ body {
 /*-цвет  footera background: #2F303A; або rgba(47, 48, 58, 1)*/
 /*-цвет background вторичний F5F4FA*/
 
+:root {
+    --primery-text-color: #757575;
+    --title-text-color: #212121;
+    --accent-color: #2196F3;
+    --primery-bg-color: #FFFFFF;
+    --secondary-bg-color: #F5F4FA;
+}
+
+body {
+    color: var(--primery-text-color);
+    background-color: var(--primery-bg-color);
+}
+.list {
+    list-style: none;
+}
+
+
 
 .logo {
     color: black;
@@ -21,46 +31,74 @@ body {
 }
 .logo:hover,
 .logo:focus {
-    color: #2196F3;
+    color: var(--accent-color);
 }
 .logo-web {
-    color: #2196F3;
+    color: var(--accent-color)
 }
 
 /*nav-list */
 
 .site-nav .link {
-    color: #212121;
+    color: var(--title-text-color);
     text-decoration: none;
 }
   
 .site-nav .link:hover,
 .site-nav .link:focus {
-    color: #2196F3;
+    color:  var(--accent-color)
 }
 
  /* Hero- Section  */
+ .hero-section {
+    background-color: #2F303A;
+ }
  .hero-title {
     color: #FFFFFF;
  }
-
-/* sectoin особливості */
-.section-title {
-    color: #212121;;
-}
-
-
-.herou-button,
+.hero-button,
 .main-button {
-    color: #212121;
-    background-color: F5F4FA;
-}
-
-.herou-button:hover,
-.herou-button:focus {
     color: #FFFFFF;
     background-color: #2196F3;
 }
+
+.hero-button:hover,
+.hero-button:focus {
+    color: #FFFFFF;
+    background-color: #2196F3;
+}
+    
+    
+
+/* sectoin features */
+.section-title {
+    color: var(--title-text-color);
+}
+/*  Features */
+.features-list .title {
+    color: var(--title-text-color);
+}
+
+/* section Taem */
+.team-list .team-title {
+    color: var(--title-text-color);
+}
+
+
+/* Button */
+
+.hero-button {
+    color: #FFFFFF;
+    background-color: var(--accent-color);
+}
+
+
+
+.main-button {
+    color: #212121;
+    background-color: var(--secondary-bg-color);
+}
+
 .main-button:focus,
 .main-button:hover {
     color: #FFFFFF;
