--- a/css/styles.css
+++ b/css/styles.css
@@ -159,6 +159,9 @@ body {
 
 .team-title {
     color: var(--title-text-color);
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.19;    
     text-align: center;
 }
 
